--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,15 +1,27 @@
+
+body {
+  background-color: #282c34;
+}
+
 .App {
   text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+@media only screen and (max-width: 619px) {
+  #svg {
+    height: 500px;
+    width: 435px;
   }
 }
 
@@ -29,8 +41,8 @@
 }
 
 .SVG {
-  height: 270px;
-  width: 450px;
+  height: 600px;
+  width: 1000px;
 }
 #chart {
     background-color: #F5F2EB;
